mise a jour et comment

--- a/testEvalbot/Objects/testFinal.build_log.htm
+++ b/testEvalbot/Objects/testFinal.build_log.htm
@@ -21,98 +21,25 @@ Target DLL:      lmidk-agdi.dll V???
 Dialog DLL:      TCM.DLL V1.14.6.0
  
 <h2>Project:</h2>
-D:\trav\testEvalbot\testFinal.uvprojx
+D:\trav\AlgoCarto\testEvalbot\testFinal.uvprojx
 Project File Date:  11/24/2015
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 1 (build 61)', folder: 'D:\pgr\Keil_v5\ARM\ARMCC\Bin'
 Rebuild target 'Target 1'
-assembling Startup.s...
 compiling main.c...
-message.h(5): warning:  #1295-D: Deprecated declaration mess_get - give arg types
-  char mess_get();
-message.h(7): warning:  #1295-D: Deprecated declaration mess_init - give arg types
-  int mess_init();
-message.h(8): warning:  #1295-D: Deprecated declaration mess_getSting - give arg types
-  int mess_getSting();
-message.h(9): warning:  #1-D: last line of file ends without a newline
-  int mess_setString(char* chs, int size);
-motor_my.h(3): warning:  #1295-D: Deprecated declaration motor_init - give arg types
-  int motor_init();
-motor_my.h(4): warning:  #1295-D: Deprecated declaration motor_UP - give arg types
-  int motor_UP();
-motor_my.h(5): warning:  #1295-D: Deprecated declaration motor_DOWN - give arg types
-  int motor_DOWN();
-motor_my.h(6): warning:  #1295-D: Deprecated declaration motor_LEFT - give arg types
-  int motor_LEFT();
-motor_my.h(7): warning:  #1295-D: Deprecated declaration motor_RIGHT - give arg types
-  int motor_RIGHT();
-motor_my.h(8): warning:  #1295-D: Deprecated declaration motor_STOP - give arg types
-  int motor_STOP();
-capteur.h(2): warning:  #1295-D: Deprecated declaration bump_init - give arg types
-  int bump_init();
-capteur.h(3): warning:  #1295-D: Deprecated declaration wheel_init - give arg types
-  int wheel_init();
-capteur.h(4): warning:  #1295-D: Deprecated declaration bumper_check - give arg types
-  int bumper_check();
-capteur.h(6): warning:  #1-D: last line of file ends without a newline
-  void actionInt(char chact );
-main.c: 14 warnings, 0 errors
+assembling Startup.s...
 compiling capteur.c...
-message.h(5): warning:  #1295-D: Deprecated declaration mess_get - give arg types
-  char mess_get();
-message.h(7): warning:  #1295-D: Deprecated declaration mess_init - give arg types
-  int mess_init();
-message.h(8): warning:  #1295-D: Deprecated declaration mess_getSting - give arg types
-  int mess_getSting();
-message.h(9): warning:  #1-D: last line of file ends without a newline
-  int mess_setString(char* chs, int size);
-capteur.h(2): warning:  #1295-D: Deprecated declaration bump_init - give arg types
-  int bump_init();
-capteur.h(3): warning:  #1295-D: Deprecated declaration wheel_init - give arg types
-  int wheel_init();
-capteur.h(4): warning:  #1295-D: Deprecated declaration bumper_check - give arg types
-  int bumper_check();
-capteur.h(6): warning:  #1-D: last line of file ends without a newline
-  void actionInt(char chact );
-motor_my.h(3): warning:  #1295-D: Deprecated declaration motor_init - give arg types
-  int motor_init();
-motor_my.h(4): warning:  #1295-D: Deprecated declaration motor_UP - give arg types
-  int motor_UP();
-motor_my.h(5): warning:  #1295-D: Deprecated declaration motor_DOWN - give arg types
-  int motor_DOWN();
-motor_my.h(6): warning:  #1295-D: Deprecated declaration motor_LEFT - give arg types
-  int motor_LEFT();
-motor_my.h(7): warning:  #1295-D: Deprecated declaration motor_RIGHT - give arg types
-  int motor_RIGHT();
-motor_my.h(8): warning:  #1295-D: Deprecated declaration motor_STOP - give arg types
-  int motor_STOP();
-capteur.c(128): warning:  #111-D: statement is unreachable
-  				break;
-capteur.c(133): warning:  #111-D: statement is unreachable
-  				break;
-capteur.c(22): warning:  #177-D: variable "bump" was declared but never referenced
-  	tBumper bump;
-capteur.c: 17 warnings, 0 errors
 compiling motor_my.c...
-message.h(5): warning:  #1295-D: Deprecated declaration mess_get - give arg types
-  char mess_get();
-message.h(7): warning:  #1295-D: Deprecated declaration mess_init - give arg types
-  int mess_init();
-message.h(8): warning:  #1295-D: Deprecated declaration mess_getSting - give arg types
-  int mess_getSting();
-message.h(9): warning:  #1-D: last line of file ends without a newline
-  int mess_setString(char* chs, int size);
-motor_my.c: 4 warnings, 0 errors
 compiling message.c...
-compiling motor.c...
 compiling sensors.c...
+compiling motor.c...
 linking...
 Program Size: Code=6080 RO-data=880 RW-data=24 ZI-data=69632  
-".\Objects\testFinal.axf" - 0 Error(s), 35 Warning(s).
+".\Objects\testFinal.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Collection of Component include folders:</h2>
-  D:\trav\testEvalbot\RTE
+  D:\trav\AlgoCarto\testEvalbot\RTE
   D:\pgr\Keil_v5\ARM\PACK\Keil\LM3S_DFP\1.1.0\Device\Include
 
 <h2>Collection of Component Files used:</h2>
